--- a/docroot/themes/iucn_backend/less/components/row_paragraph_widget.less
+++ b/docroot/themes/iucn_backend/less/components/row_paragraph_widget.less
@@ -222,12 +222,12 @@
         background: #ececec;
         border-bottom: 1px solid rgb(230, 228, 223);
         height: 14px;
-        overflow: auto;
+        overflow: auto hidden;
         .inner {
           background: #ececec;
           border-bottom: 1px solid rgb(230, 228, 223);
           height: 14px;
-          overflow-y: hidden;
+          overflow: hidden;
         }
       }
     }
